# ai-worker

./: .dockerignore  .gitignore  Dockerfile  README.md  build_image.sh  pyproject.toml
.agents/: AGENTS.md
app/: config.py  main.py  reindexer.py  worker.py
app/processors/: __init__.py  base.py  task_extractor.py
app/services/: transcription.py
app/workers/: __init__.py  processor.py  transcription.py
tests/: test_reindexer.py  test_transcription_worker.py
