[project]
name = "ai-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "aiolimiter>=1.2.1",
    "groq",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "nats-py>=2.15.0",
    "pydantic-settings>=2.14.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
